a4/stage/tests/reject/empty_paren.ul
void main() {
    int s;
    s = 5 * 6 - ();
}
